--- a/dokka-subprojects/plugin-base-frontend/src/main/ui-kit/icon/styles.scss
+++ b/dokka-subprojects/plugin-base-frontend/src/main/ui-kit/icon/styles.scss
@@ -1,7 +1,7 @@
 /*!
  * Copyright 2014-2024  JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license.
  */
-@import '../tokens/index';
+@import '../_tokens/index';
 
 .ui-kit-icon {
   width: var(--size-m1);
@@ -24,13 +24,13 @@
 }
 
 .ui-kit-icon_arrow-down {
-  background-image: url('./assets/arrow-down.svg');
+  background-image: url('../_assets/arrow-down.svg');
 }
 
 .ui-kit-icon_placeholder {
-  background-image: url('./assets/placeholder.svg');
+  background-image: url('../_assets/placeholder.svg');
 }
 
 .ui-kit-icon_cross {
-  background-image: url('./assets/cross.svg');
+  background-image: url('../_assets/cross.svg');
 }
